Enhance LocalStoragePro with new features and documentation
- Updated .gitignore to include additional files and directories.
- Revised README.md to reflect new functionalities and maintainer information.
- Updated version to 0.3.0 in setup.py and __init__.py.
- Added example_demo.py to demonstrate new methods: getAll(), getMany(), and removeAll().
- Created test_complete.py and test_simple.py to validate all functionalities, including bulk operations and error handling.
- Improved docstrings across the codebase for better clarity and usage examples.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 __pycache__
 .localStoragePy-devenv
-.localStoragePy.egg-info
-localStoragePy.egg-info
+*.egg-info
 build
 dist
+.idea
 .vscode
 .DS_Store
+.venv
