Refactor localStoragePro and enhance documentation
- Removed example_demo.py and quickstart.py from examples directory.
- Updated .gitignore to include temporary testing files and lock files.
- Revised README.md to improve clarity and add asynchronous usage examples.
- Updated pyproject.toml to specify optional dependencies and adjust Python version requirements.
- Enhanced test suite with improved test cases and error handling.
- Added support for asynchronous operations in localStoragePro.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
@@ -10,3 +10,8 @@ addopts =
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+asyncio_mode = auto
+
+# Add markers
+markers =
+    asyncio: mark a test as an asyncio coroutine
