--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "localStoragePro"
 version = "0.3.0"
 description = "A familiar API from the Web, adapted to storing data locally with Python."
 readme = "README.md"
-license = { file = "LICENSE" }
+license = "MIT"
 authors = [
     { name = "Suraj Mandal", email = "localstoragepro.oss@mandalsuraj.com" },
 ]
@@ -17,10 +17,8 @@ maintainers = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -38,7 +36,7 @@ keywords = [
     "local",
     "data",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
 [project.urls]
 "Homepage" = "https://github.com/surajmandalcell/localStoragePro"
@@ -55,5 +53,5 @@ where = ["src"]
 [tool.setuptools.package-data]
 localStoragePro = ["py.typed"]
 
-[dependency-groups]
-dev = ["pytest>=8.3.5"]
+[project.optional-dependencies]
+dev = ["pytest>=8.3.5", "pytest-asyncio>=0.23.5", "twine", "build"]
